deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-reviews
  labels:
    app.kubernetes.io/instance: globex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: product-reviews
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: globex
    app.kubernetes.io/name: product-reviews
