deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-reviews
  labels:
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: product-reviews
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: globex
        app.kubernetes.io/name: product-reviews
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: product-reviews
      containers:
        - name: product-reviews
          image: 'quay.io/globex-sentiment-analysis/product-reviews:latest'
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /deployments/config
              name: config
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          secret:
            secretName: product-reviews

---
apiVersion: v1
kind: Service
metadata:
  name: product-reviews
  labels:
    app.kubernetes.io/instance: globex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: product-reviews
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: globex
    app.kubernetes.io/name: product-reviews

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: product-reviews
  labels:
    app.kubernetes.io/instance: globex
    app.kubernetes.io/name: product-reviews
spec:
  path: /
  to:
    kind: Service
    name: product-reviews
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
